--- a/pages/registro.html
+++ b/pages/registro.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@200&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="shortcut icon" href="./assets/img/Screenshot 2023-05-30 18.49.07.png" type="image/x-icon">
   <title>Masigu</title>
 
